--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: 1.19
 authors: [ logzinga ]
 description: Plugin that does some things when a Player murders someone
 website: http://owocraft.logzinga.com
+commands:
+  youmurdererabout:
+    description:  About YouMurderer
+    usage: /<command>
